--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
                 fingerprints:
                     - "de:c3:47:8e:28:31:55:01:9d:f7:08:f9:df:8e:79:e0"
             - run:
-                name: "Deploy image to production"
+                name: "Deploy image to productionnes"
                 command: |
                     ssh ${PRODUCTION_SERVER_USER}@${PRODUCTION_SERVER_IP} "cd ${PRODUCTION_SERVER_PATH} && ./deploy.sh"
 
